fix: corregir endpoint de alerta_dominio en dashboard

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard-modern.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/cleanup.css') }}">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/fix-canvas-zoom.css') }}">
+  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/fix-canvas-zoom.css') }}">-->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/focus-mode.css') }}">
 </head>
 <body
